Begin deprecation of listSyncUncached